20.11.2015
-Fixed timer
	-Timer now gets real time rather than time dependent on CPU tickrate.
13.11.2015
- Fixed spritesheet frame changing
- Fixed Some possible memory leaks (still a memory leak somewhere in draw texts)

6.11.2015
- Support for scenes, does not work for physics components, physics need to be disabled before scene change
- Added pause and resume for timer
- Examples updated
- Added comments
30.10.2015
-Projectiles destroy each other in collision
-Spritebatching turned on
-Spritesheet animation works
-Gameobject destructor fixed
-Collision fixes
-Added coordinate transformation functions

16.10.2015
- On pause main loop stops and support for pausing audio with siika_onPause() and siika_onResume()
- Simplified gameobject creation with a constructor that creates all components
- Improved demostration program with added comments (incomplete)
- Coordinate transformation updated
- Added support for finger swipes to input
- Collision detection. Use colListener class and register it in siika->_boxWorld->SetContactListener()
- Updated physics component with with various functions from box2d (force, gravityscale, torque).
 

9.10.2015
- Losing focus works and returns properly
- Improved sprite drawing and patching
- Physics component added
	- Access to b2world from siika->getB2World()
	- Added physics component to gameobject
- Coordinate transformation class added
	- Access from siika->transfCrds();
	- Defaults to device screen size, 2000x2000 for user coordinates and 100 pixels per meter for box2d



	
	